logs/turtlesim/build.make.176.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘void turtlesim::Turtle::paint(QPainter&)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:239:3: error: ‘p’ was not declared in this scope
   p.rx() -= 0.5 * turtle_rotated_image_.width();
   ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
